--- a/awards/templates/project.html
+++ b/awards/templates/project.html
@@ -82,12 +82,12 @@
         <div class="d-flex mb-2">
             {%if project.live_url %}
             <div class="live_link">
-               <a href="{{project.live_url}}" target="_blank"> <i class='bx bx-link-external'></i></a>
+               <a href="{{project.live_link}}" target="_blank"> <i class='bx bx-link-external'></i></a>
             </div>
             {% endif %}
             {% if project.repository_url %}
             <div class="github_link mx-3">
-               <a href="{{project.repository_url}}" target=" _blank"><i class='bx bxl-github'></i></a>
+               <a href="{{project.repository_link}}" target=" _blank"><i class='bx bxl-github'></i></a>
             </div>
             {% endif %}
         </div>
