--- a/awards/templates/auth/login.html
+++ b/awards/templates/auth/login.html
@@ -19,7 +19,7 @@
     </div>
     <button type="submit" class="btn btn-primary w-100">Sign In</button>
     <hr>
-    <p class="my-4">Don't have an account? <a href="{% url 'register'%}">Sign Up</a></p>
+    <p class="my-4 dnt">Don't have an account? <a href="{% url 'register'%}">Sign Up</a></p>
 </form>
 
 {% endblock %}
