--- a/static/css/style.css
+++ b/static/css/style.css
@@ -61,6 +61,10 @@ a:hover { text-decoration: none; }
     color:var(--main4-color);
 }
 
+.dnt{
+    color: grey;
+}
+
 a:link { text-decoration: none; }
 
 
