This commit adds a default url

--- a/awards/templates/index.html
+++ b/awards/templates/index.html
@@ -71,7 +71,7 @@
                 </div>
                 <div class="posted_by d-flex my-2">
                     <div class="profilepic">
-                        <img src="{{project.owner.profile_pic.url}}" alt="">
+                        <img src="{{project.owner.profile_pic.url|default_if_none:'#'}}" alt="">
                     </div>
                     <div class="username mx-3">
                         <div class="fullname">{{project.owner.user.first_name | title}} {{project.owner.user.last_name | title}}</div>
