This commit updates the profile_pic.url default img

--- a/awards/templates/index.html
+++ b/awards/templates/index.html
@@ -71,7 +71,11 @@
                 </div>
                 <div class="posted_by d-flex my-2">
                     <div class="profilepic">
+                        {% if project.owner.profile_pic.url%}
                         <img src="{{project.owner.profile_pic.url}}" alt="">
+                        {%else%}
+                        <img src="{%static 'img/default.png'%}" alt="">
+                        {%endif%}
                     </div>
                     <div class="username mx-3">
                         <div class="fullname">{{project.owner.user.first_name | title}} {{project.owner.user.last_name | title}}</div>
