--- a/awards/templates/profile.html
+++ b/awards/templates/profile.html
@@ -29,8 +29,12 @@
     <div class="profile">
         <div class="d-flex mb-4">
             <div class="profile_pic">
+                {% if user.profile.profile_pic %}
                 <img src="{{user.profile.profile_pic.url}}" alt="">
-        </div>
+                {% else %}
+                <img src="{%static 'img/default.png'%}" alt="">
+                {% endif %}
+</div>
         <div class="details">
             <ul>
                 <li><strong>Full Name:</strong> {{ user.first_name }} {{user.last_name}}</li>
