This commit updates the boxicons logos

--- a/awards/templates/project.html
+++ b/awards/templates/project.html
@@ -87,7 +87,7 @@
             {% endif %}
             {% if project.repository_url %}
             <div class="github_link mx-3">
-               <a href="{{project.repository_link}}" target=" _blank"><i class='bx bxl-github'></i></a>
+               <a href="{{project.repository_link}}" target=" _blank"><box-icon type='logo' name='github'></box-icon></a>
             </div>
             {% endif %}
         </div>
