--- a/awards/templates/base.html
+++ b/awards/templates/base.html
@@ -15,7 +15,7 @@
     {% block styles %}
     {% bootstrap_css %}
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/solid.css">
-    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     {% endblock %}
 </head>
@@ -33,6 +33,8 @@
     </script>
 
     <script src="https://kit.fontawesome.com/92684d67dd.js" crossorigin="anonymous"></script>
+
+    <script src="https://unpkg.com/boxicons@2.1.2/dist/boxicons.js"></script>
 
     <script src="{% static 'js/scripts.js'%}"></script>
     
