--- a/awards/templates/project.html
+++ b/awards/templates/project.html
@@ -80,14 +80,14 @@
         <div id="reviewButton" class="btn btn-outline-primary my-4 rounded-0 text-uppercase" data-bs-toggle="modal"
             data-bs-target="#newReviewModal">Add Review</div>
         <div class="d-flex mb-2">
-            {%if project.live_url %}
+            {%if project.live_link %}
             <div class="live_link">
                <a href="{{project.live_link}}" target="_blank"> <i class='bx bx-link-external'></i></a>
             </div>
             {% endif %}
-            {% if project.repository_url %}
+            {% if project.repository_link %}
             <div class="github_link mx-3">
-               <a href="{{project.repository_link}}" target=" _blank"><box-icon type='logo' name='github'></box-icon></a>
+               <a href="{{project.repository_link}}" target=" _blank"><i class='bx bxl-github'></i></a>
             </div>
             {% endif %}
         </div>
